# mango-network-website

./: .gitignore  README.md
v1/: profile  sitecmd
v1/devel/backend/: CHANGES  LICENSE  MANIFEST.in  setup.cfg
v1/devel/backend/src/server/: __init__.py  config.py  metadata.py  model.py
v1/devel/backend/src/server/migrations/: env.py
v1/devel/backend/src/server/migrations/versions/: 4836ebf9a400_initial.py
v1/devel/backend/src/server/routes/: admin.py  api.py  util.py
v1/devel/backend/src/server/routes/templates/api/: acknowledgment.html  acknowledgment.txt  creation_notify.html  creation_notify.txt
v1/devel/frontend/: .env  env  package.json
v1/devel/frontend/src/: index.js  setupProxy.js
v1/devel/frontend/src/app/: app.js  auth.js  header.js  layout.js
v1/devel/frontend/src/app/pages/: index.js
v1/devel/frontend/src/app/pages/about/: StationMap.js  science.js  sites.js
v1/devel/frontend/src/app/pages/auth/: LoginPage.js
v1/devel/frontend/src/app/pages/dashboard/: CalendarView.js  DataView.js  FusionDataRedirect.js  FusionDataView.js  FusionRedirect.js  Home.js  InstrumentDataRedirect.js  InstrumentDataView.js  InstrumentRedirect.js  InstrumentView.js  MovieViewer.js  PlotViewer.js  StationList.js  StationMap.js  StatisticsDataView.js  StatisticsRedirect.js  StatisticsView.js  UptimeTableView.js  index.js
v1/devel/frontend/src/services/: api.service.js
v1/devel/frontend/src/store/model/: index.js
v1/devel/frontend/src/support/assets/: retiredstations.js
v1/devel/frontend/src/support/helpers/: index.js  print_kit.js  savefile.js
(+6 files in other folders)
