[metadata]

name = mango_network_website
version = attr: server.metadata.version
license = MIT 

author = Todd Valentic
author_email= todd.valentic@gmail.com

description= Boilerplate for a Valentic web application using React and Flask.
long_description = file: README

url = https://github.com/valentic/mango_network_website 
project_urls = 
    Source Code = https://github.com/valentic/mango_network_website 
    Issue Tracker = https://github.com/valentic/mango_network_website/tracker

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
zip_safe = False

packages = find_namespace:

install_requires=
    pytz
    dateutils
    eventlet
    requests
    bcrypt
    flask
    psycopg2-binary
    sqlalchemy
    Flask-SQLAlchemy
    flask-compress
    flask-script
    flask-migrate
    flask-bcrypt
    flask-jwt-extended
    flask-socketio
    flask-restful
    flask-mail
    flask-flatpages
    coverage
    PyJWT
    cryptography
    itsdangerous
    docutils

[options.package_data]
server  = 
    migrations/*
    migrations/versions/*
    templates/*
    routes/templates/auth/*
    routes/templates/api/*
    static/js/*
    static/media/*
    static/css/*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    server-cmd = server.commands:cli
    server-launch = server.commands:launch
